update projects integration

--- a/optionals/de.easy-coding.wcf.projects.glassfish/serverside/README
+++ b/optionals/de.easy-coding.wcf.projects.glassfish/serverside/README
@@ -1,6 +1,9 @@
 apt-get install sun-java6-jdk 
 apt-get install glassfishv2
 
+Benutzer:admin
+Passwort:adminadmin
+
 
 Start processing at    Sun Dec 28 18:53:59 2008
 
